# BlackHawk

./: .gitignore  README.md  docker-compose.yml
.agent/skills/ui-ux-pro-max/data/: charts.csv  colors.csv  landing.csv  products.csv  styles.csv  ui-reasoning.csv
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile  main.py  requirements.txt  scanner.py
backend/src/: db.rs  main.rs  models.rs  owasp.rs  scanner.rs
frontend/: app.js  index.html  style.css
