[package]
name = "zscanner-api"
version = "1.0.0"
edition = "2021"
description = "Z-Scanner — Web Application Security Scanner backend powered by OWASP ZAP"

[[bin]]
name = "zscanner-api"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
csv = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
